--- a/css/style_Home.css
+++ b/css/style_Home.css
@@ -2,10 +2,14 @@ body{
     padding: 0;
     margin: 0;
 }
-
-.dif-nav{
-   
+.container{
+    border: tomato 1px solid;
 }
+
+
+
+
+
 .logo{
     
     width: 15%;
