--- a/css/style_Home.css
+++ b/css/style_Home.css
@@ -4,6 +4,7 @@ body{
 }
 .container{
     border: tomato 1px solid;
+    overflow: hidden;
 }
 .row{
     border: blue 1px solid;
@@ -51,13 +52,14 @@ body{
     position: absolute;
 }
 
+
+
+
 .img-slider{
     position: relative;
-    width: 800px;
+    width: 100%;
     height: 500px;
-    margin: 10px;
-    background: #1D212B;
-  }
+}
   
   .img-slider .slide{
     z-index: 1;
@@ -75,14 +77,9 @@ body{
   .img-slider .slide img{
     z-index: 1;
     width: 100%;
-    border-radius: 5px;
+    height: auto;
   }
   
-  .img-slider .slide .info{
-    position: absolute;
-    top: 0;
-    padding: 15px 30px;
-  }
   .img-slider .navigation{
     z-index: 2;
     position: absolute;
@@ -92,101 +89,27 @@ body{
     transform: translateX(-50%);
   }
   
-  .img-slider .navigation .btn{
-    background: rgba(255, 255, 255, 0.5);
-    width: 12px;
-    height: 12px;
-    margin: 10px;
-    border-radius: 50%;
-    cursor: pointer;
-  }
-  
-  .img-slider .navigation .btn.active{
-    background: #2696E9;
-    box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
-  }
-  
   @media (max-width: 820px){
     .img-slider{
       width: 600px;
       height: 375px;
     }
-  
-    .img-slider .slide .info{
-      padding: 10px 25px;
-    }
-  
-    .img-slider .slide .info h2{
-      font-size: 35px;
-    }
-  
-    .img-slider .slide .info p{
-      width: 70%;
-      font-size: 15px;
-    }
-  
-    .img-slider .navigation{
-      bottom: 25px;
-    }
-  
-    .img-slider .navigation .btn{
-      width: 10px;
-      height: 10px;
-      margin: 8px;
-    }
+   
   }
   
   @media (max-width: 620px){
     .img-slider{
-      width: 400px;
+      width: 100%;
       height: 250px;
+      margin: 0;
     }
   
-    .img-slider .slide .info{
-      padding: 10px 20px;
-    }
-  
-    .img-slider .slide .info h2{
-      font-size: 30px;
-    }
-  
-    .img-slider .slide .info p{
-      width: 80%;
-      font-size: 13px;
-    }
-  
-    .img-slider .navigation{
-      bottom: 15px;
-    }
-  
-    .img-slider .navigation .btn{
-      width: 8px;
-      height: 8px;
-      margin: 6px;
-    }
-  }
   
   @media (max-width: 420px){
     .img-slider{
-      width: 320px;
+        width: 100%;
       height: 200px;
-    }
-  
-    .img-slider .slide .info{
-      padding: 5px 10px;
-    }
-  
-    .img-slider .slide .info h2{
-      font-size: 25px;
-    }
-  
-    .img-slider .slide .info p{
-      width: 90%;
-      font-size: 11px;
-    }
-  
-    .img-slider .navigation{
-      bottom: 10px;
+      margin: 0;
     }
   }
                              
