--- a/css/style_Home.css
+++ b/css/style_Home.css
@@ -15,7 +15,7 @@ body{
 
 
 
-
+/* nav bar */
 .logo{
     
     width: 15%;
@@ -53,8 +53,7 @@ body{
 }
 
 
-
-
+/* slide */
 .img-slider{
     position: relative;
     width: 100%;
@@ -88,14 +87,23 @@ body{
     left: 50%;
     transform: translateX(-50%);
   }
+
+
+
+  /* new product */
+
+.middle img{
+    width: 100%;
+}
+
   
   @media (max-width: 820px){
     .img-slider{
-      width: 600px;
+      width: 100%;
       height: 375px;
     }
-   
-  }
+    
+}
   
   @media (max-width: 620px){
     .img-slider{
@@ -103,13 +111,15 @@ body{
       height: 250px;
       margin: 0;
     }
+    
   
-  
+}
   @media (max-width: 420px){
     .img-slider{
         width: 100%;
       height: 200px;
       margin: 0;
     }
-  }
-                             
+     
+}
+
