--- a/css/style_Home.css
+++ b/css/style_Home.css
@@ -1,6 +1,7 @@
 body{
     padding: 0;
     margin: 0;
+    height: 2300px;
 }
 .container{
     border: tomato 1px solid;
@@ -57,68 +58,115 @@ body{
 .img-slider{
     position: relative;
     width: 100%;
-    height: 500px;
-}
+    border: blue 1px solid;
   
-  .img-slider .slide{
+}
+
+.img-slider .slide{
     z-index: 1;
     position: absolute;
     width: 100%;
     clip-path: circle(0% at 0 50%);
-  }
+}
   
-  .img-slider .slide.active{
+.img-slider .slide.active{
     clip-path: circle(150% at 0 50%);
     transition: 2s;
     transition-property: clip-path;
-  }
+}
   
-  .img-slider .slide img{
+.img-slider .slide img{
     z-index: 1;
     width: 100%;
-    height: auto;
-  }
+}
   
-  .img-slider .navigation{
+.img-slider .navigation{
     z-index: 2;
     position: absolute;
     display: flex;
     bottom: 30px;
     left: 50%;
     transform: translateX(-50%);
-  }
+}
 
 
 
   /* new product */
-
 .middle img{
     width: 100%;
 }
 
-  
-  @media (max-width: 820px){
+
+
+  @media (max-width: 1200px){
     .img-slider{
       width: 100%;
+      height: 375px;
+    }
+    .img-slider .slide img{
+      z-index: 1;
+      width: auto;
+      height: 375px;
+      margin-left: 210px;
+    }
+    .slidebox{
+      height: 375px;
+    }
+    .img-slider .slide{
+      width: auto;
+      height: 375px;
+    }
+    
+    .img-slider .slide.active{
+      width: auto;
       height: 375px;
     }
     
 }
   
-  @media (max-width: 620px){
+  @media (max-width: 768px){
     .img-slider{
       width: 100%;
       height: 250px;
       margin: 0;
     }
+    .img-slider .slide img{
+      z-index: 1;
+      width: auto;
+      height: 250px;
+      margin-left: 120px;
+    }
+    .img-slider .slide{
+      width: auto;
+      height: 250px;
+    }
     
+    .img-slider .slide.active{
+      width: auto;
+      height: 250px;
+    }
   
 }
-  @media (max-width: 420px){
+  @media (max-width: 480px){
     .img-slider{
-        width: 100%;
+      width: 100%;
       height: 200px;
       margin: 0;
+    }
+    .img-slider .slide img{
+      z-index: 1;
+      width: auto;
+      height: 200px;
+      margin-left: 25px;
+    }
+    .img-slider .slide{
+      width: auto;
+      height: 200px;
+    }
+    
+    .img-slider .slide.active{
+      width: auto;
+      height: 200px;
     }
      
 }
