--- a/css/style_Home.css
+++ b/css/style_Home.css
@@ -55,119 +55,114 @@ body{
 
 
 /* slide */
+.slidebox{
+  border: green 1px solid;
+  margin:0 auto;
+  width: 90%;
+}
 .img-slider{
-    position: relative;
-    width: 100%;
-    border: blue 1px solid;
-  
+  position: relative;
+  width: 100%;
+  height: 520px;
+  border: blue 1px solid;
+  padding-left: 0;
 }
 
 .img-slider .slide{
-    z-index: 1;
-    position: absolute;
-    width: 100%;
-    clip-path: circle(0% at 0 50%);
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+  clip-path: circle(0% at 0 50%);
 }
-  
+
 .img-slider .slide.active{
-    clip-path: circle(150% at 0 50%);
-    transition: 2s;
-    transition-property: clip-path;
+  clip-path: circle(150% at 0 50%);
+  transition: 2s;
+  transition-property: clip-path;
 }
-  
+
 .img-slider .slide img{
+  z-index: 1;
+  width: 100%;
+}
+.img-slider .navigation{
+  z-index: 2;
+  position: absolute;
+  display: flex;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.img-slider .navigation .dif-btn{
+  background: rgba(255, 255, 255, 0.5);
+  width: 12px;
+  height: 12px;
+  margin: 10px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.img-slider .navigation .dif-btn.active{
+  background: #EF3C5F;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+  
+}
+
+@media (max-width: 1200px){
+  .img-slider{
+    width: 80%;
+    height: 400px;
+  }
+  .img-slider .slide img{
     z-index: 1;
     width: 100%;
-}
   
-.img-slider .navigation{
-    z-index: 2;
-    position: absolute;
-    display: flex;
-    bottom: 30px;
-    left: 50%;
-    transform: translateX(-50%);
+  }
+  .img-slider .navigation{
+    bottom: 25px;
+  }
+  .img-slider .navigation .dif-btn{
+    width: 10px;
+    height: 10px;
+    margin: 8px;
+  }
 }
 
-
-
-  /* new product */
-.middle img{
+@media (max-width: 786px){
+  .img-slider{
+    width: 80%;;
+    height: 250px;
+  }
+  .img-slider .slide img{
+    z-index: 1;
     width: 100%;
+   
+  }
+  .img-slider .navigation{
+    bottom: 15px;
+  }
+  .img-slider .navigation .dif-btn{
+    width: 8px;
+    height: 8px;
+    margin: 6px;
+  }
 }
+
+@media (max-width: 480px){
+  .img-slider{
+    width: 100%;
+    height: 200px;
+  }
+  .img-slider .navigation{
+    bottom: 10px;
+  }
+  .img-slider .slide img{
+    z-index: 1;
+    width: 100%;
+   
+  }
+}
+                           
 
 
 
-  @media (max-width: 1200px){
-    .img-slider{
-      width: 100%;
-      height: 375px;
-    }
-    .img-slider .slide img{
-      z-index: 1;
-      width: auto;
-      height: 375px;
-      margin-left: 210px;
-    }
-    .slidebox{
-      height: 375px;
-    }
-    .img-slider .slide{
-      width: auto;
-      height: 375px;
-    }
-    
-    .img-slider .slide.active{
-      width: auto;
-      height: 375px;
-    }
-    
-}
-  
-  @media (max-width: 768px){
-    .img-slider{
-      width: 100%;
-      height: 250px;
-      margin: 0;
-    }
-    .img-slider .slide img{
-      z-index: 1;
-      width: auto;
-      height: 250px;
-      margin-left: 120px;
-    }
-    .img-slider .slide{
-      width: auto;
-      height: 250px;
-    }
-    
-    .img-slider .slide.active{
-      width: auto;
-      height: 250px;
-    }
-  
-}
-  @media (max-width: 480px){
-    .img-slider{
-      width: 100%;
-      height: 200px;
-      margin: 0;
-    }
-    .img-slider .slide img{
-      z-index: 1;
-      width: auto;
-      height: 200px;
-      margin-left: 25px;
-    }
-    .img-slider .slide{
-      width: auto;
-      height: 200px;
-    }
-    
-    .img-slider .slide.active{
-      width: auto;
-      height: 200px;
-    }
-     
-}
-
+ 
