--- a/css/style_Home.css
+++ b/css/style_Home.css
@@ -56,7 +56,6 @@ body{
 
 /* slide */
 .slidebox{
-  border: green 1px solid;
   margin:0 auto;
   width: 90%;
 }
@@ -64,7 +63,6 @@ body{
   position: relative;
   width: 100%;
   height: 520px;
-  border: blue 1px solid;
   padding-left: 0;
 }
 
@@ -107,6 +105,10 @@ body{
   
 }
 
+/* img */
+
+
+
 @media (max-width: 1200px){
   .img-slider{
     width: 80%;
@@ -124,6 +126,9 @@ body{
     width: 10px;
     height: 10px;
     margin: 8px;
+  }
+  .middle-line{
+    width: 100%;
   }
 }
 
@@ -145,6 +150,9 @@ body{
     height: 8px;
     margin: 6px;
   }
+  .middle-line{
+    width: 100%;
+  }
 }
 
 @media (max-width: 480px){
@@ -159,6 +167,9 @@ body{
     z-index: 1;
     width: 100%;
    
+  }
+  .middle-line{
+    width: 100%;
   }
 }
                            
