--- a/css/style_Product.css
+++ b/css/style_Product.css
@@ -2,7 +2,7 @@ body{
     padding: 0;
     margin: 0;
 }
-/* .container{
+.container{
     border: tomato 1px solid;
     overflow: hidden;
 }
@@ -14,7 +14,7 @@ body{
 }
 .col-6{
   border: pink 1px solid;
-} */
+} 
 
 
 /* nav bar */
@@ -54,115 +54,6 @@ body{
     position: absolute;
 }
 
-
-/* slide */
-.slidebox{
-  margin:0 auto;
-  width: 90%;
-}
-.img-slider{
-  position: relative;
-  width: 100%;
-  height: 520px;
-  padding-left: 0;
-}
-
-.img-slider .slide{
-  z-index: 1;
-  position: absolute;
-  width: 100%;
-  clip-path: circle(0% at 0 50%);
-}
-
-.img-slider .slide.active{
-  clip-path: circle(150% at 0 50%);
-  transition: 2s;
-  transition-property: clip-path;
-}
-
-.img-slider .slide img{
-  z-index: 1;
-  width: 100%;
-}
-.img-slider .navigation{
-  z-index: 2;
-  position: absolute;
-  display: flex;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-}
-.img-slider .navigation .dif-btn{
-  background: rgba(255, 255, 255, 0.5);
-  width: 12px;
-  height: 12px;
-  margin: 10px;
-  border-radius: 50%;
-  cursor: pointer;
-}
-.img-slider .navigation .dif-btn.active{
-  background: #EF3C5F;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
-  
-}
-
-/* new product */
-.line-con{
-  margin-top: 20px;
-}
-.new-product img{
-  margin:0 auto;
-  width: 250px;
-} 
- .like{
-  width: 35px;
-  /* margin-left: 285px;
-  margin-top: -15px; */
-}
-.like img{
-  width: 35px;
-  height: 35px;
-
-} 
-
-/* line */
-.line img{
-  margin-top: 15px;
-  width: 100%;
-}
-/* bottom img */
-.bottom_img{
-  margin-top: 30px;
-  /* width: 100vw; */
-  /* height: 400px; */
-  /* background-color: grey;  */
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin-left: 55px;
-}
-.bottom_img .box-btm{
-  position: relative;
-  width: 330px;
-  height: 330px;
-  /* background-color:#413b3c;  */
-  margin: 8px;
-  box-sizing: border-box;
-  display: inline-block;
-}
-.bottom_img .box-btm img{
-  width: 330px;
-  height: 330px;
-}
-.bottom_img:hover .box-btm img{
-  filter: blur(15px) brightness(.8);
-  transform: scale(0.9);
-}
-.bottom_img .box-btm:hover img{
-  filter: blur(0px);
-  transform: scale(1.1);
- 
-}
 /* footer */
 .footer{
   /* border: red 1px solid; */
@@ -230,129 +121,12 @@ th{
 
 /* rwd */
 @media (max-width: 1200px){
-  .img-slider{
-    width: 80%;
-    height: 400px;
-  }
-  .img-slider .slide img{
-    z-index: 1;
-    width: 100%;
   
-  }
-  .img-slider .navigation{
-    bottom: 25px;
-  }
-  .img-slider .navigation .dif-btn{
-    width: 10px;
-    height: 10px;
-    margin: 8px;
-  }
-  .middle-line{
-    width: 100%;
-  }
-  .new-product img{
-    width: 250px;
-  }
-.like{
-  width: 35px;
-  /* margin-left: 195px;
-  margin-top: -20px; */
-}
-.like img{
-  width: 35px;
-  height: 35px;
-}
-.content h6{
- 
-  font-size: 18px;
-  line-height: 20px;
-}
-.content p{
-
-  font-size: 16px;
-  line-height: 20px;
-  margin: 0;
-}
-.bottom_img:hover .box-btm img{
-  filter: blur(15px) brightness(.8);
-  transform: scale(0.9);
-}
-.bottom_img .box-btm:hover img{
-  filter: blur(0px);
-  transform: scale(1.1);
-}
 
 }
 
 @media (max-width: 786px){
-  .img-slider{
-    width: 80%;;
-    height: 250px;
-  }
-  .img-slider .slide img{
-    z-index: 1;
-    width: 100%;
-  }
-  .img-slider .navigation{
-    bottom: 15px;
-  }
-  .img-slider .navigation .dif-btn{
-    width: 8px;
-    height: 8px;
-    margin: 6px;
-  }
-  .middle-line{
-    width: 100%;
-  }
-  .new-product img{
-    width: 220px;
-    /* border: red 1px solid; */
-    margin-left: 40px;
-  }
-  .like{
-    width: 35px;
-    /* margin-left: 205px;
-    margin-top: -19px;  */
-  }
-  .like img{
-    width: 35px;
-    height: 35px;
-  }
-  .content h6{
-    text-align: center;
-    font-size: 16px;
-    line-height: 20px;
-  }
-  .content p{
-    text-align: center;
-    font-size: 14px;
-    line-height: 20px;
-    margin: 0;
-  }
-  .bottom_img{
-    margin-left: 40px;
-  }
-  .bottom_img .box-btm{
-    position: relative;
-    width: 200px;
-    height: 200px;
-    /* background-color:#413b3c;  */
-    /* margin: 20px; */
-    box-sizing: border-box;
-    display: inline-block;
-  }
-  .bottom_img .box-btm img{
-    width: 200px;
-    height: 200px;
-  }
-  .bottom_img:hover .box-btm img{
-    filter: blur(15px) brightness(.8);
-    transform: scale(0.9);
-  }
-  .bottom_img .box-btm:hover img{
-    filter: blur(0px);
-    transform: scale(1.1);
-  }
+
   td a{
     color: black;
     font-size: 12px;
@@ -387,67 +161,7 @@ th{
 }
 
 @media (max-width: 480px){
-  .img-slider{
-    width: 100%;
-    height: 200px;
-  }
-  .img-slider .navigation{
-    bottom: 10px;
-  }
-  .img-slider .slide img{
-    z-index: 1;
-    width: 100%;
-   
-  }
-  .middle-line{
-    width: 100%;
-  }
-  .new-product img{
-    width: 165px;
-    margin: 0;
-  }
-  .like{
-    /* width: 25px; */
-    /* margin-left: 95px;
-    margin-top: -15px; */
-  }
-  .like img{
-    width: 25px;
-    height: 25px;
-  }
-  .content h6{
-    font-size: 16px;
-    line-height: 20px;
-  }
-  .content p{
-    font-size: 14px;
-    line-height: 20px;
-    margin: 0;
-  }
-  .bottom_img{
-    margin: 0;
-  }
-  .bottom_img .box-btm{
-    position: relative;
-    width: 120px;
-    height: 120px;
-    /* background-color:#413b3c;  */
-    /* margin: 20px; */
-    box-sizing: border-box;
-    display: inline-block;
-  }
-  .bottom_img .box-btm img{
-    width: 120px;
-    height: 120px;
-  }
-  .bottom_img:hover .box-btm img{
-    filter: blur(15px) brightness(.8);
-    transform: scale(0.9);
-  }
-  .bottom_img .box-btm:hover img{
-    filter: blur(0px);
-    transform: scale(1.1);
-  }
+  
   .footer{
     display: none;
   }
