--- a/css/style_Product.css
+++ b/css/style_Product.css
@@ -17,6 +17,31 @@ body{
 } 
 
 
+/* product nav bar */
+a{
+    color: gray;
+    font-size: 20px;
+}
+a:hover{
+    color: #EF3C5F;
+    text-decoration-line: underline;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* nav bar */
 .logo{
     
@@ -158,6 +183,10 @@ th{
     margin-top: 80px;
 
   }
+  a{
+    color: gray;
+    font-size: 16px;
+}
 }
 
 @media (max-width: 480px){
@@ -209,6 +238,10 @@ th{
     font-size: 8px;
     text-align: center;
   }
+  a{
+    color: gray;
+    font-size: 14px;
+}
 }
                            
 
