--- a/css/style_Home.css
+++ b/css/style_Home.css
@@ -229,7 +229,7 @@ th{
 
 
 /* rwd */
-@media (max-width: 1200px){
+@media (min-width: 1200px){
   .img-slider{
     width: 80%;
     height: 400px;
@@ -284,7 +284,7 @@ th{
 
 }
 
-@media (max-width: 786px){
+@media (min-width: 786px){
   .img-slider{
     width: 80%;;
     height: 250px;
@@ -386,7 +386,7 @@ th{
   }
 }
 
-@media (max-width: 480px){
+@media (min-width: 480px){
   .img-slider{
     width: 100%;
     height: 200px;
